rust-runtime/aws-smithy-types/tests/compile-fail/document_match_missing_wildcard.stderr
error[E0004]: non-exhaustive patterns: `&_` not covered
  --> tests/compile-fail/document_match_missing_wildcard.rs:18:11
   |
18 |     match d {
   |           ^ pattern `&_` not covered
   |
note: `Document` defined here
  --> src/document/mod.rs
   |
   | pub enum Document {
   | ^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `&Document`
   = note: `Document` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
28 ~         Document::BigDecimal(_) => "bigDecimal",
29 ~         &_ => todo!(),
   |
